--- a/Ogani Tempalte/css/style.css
+++ b/Ogani Tempalte/css/style.css
@@ -35,7 +35,6 @@ body {
 	height: 100%;
 	font-family: "Cairo", sans-serif;
 	-webkit-font-smoothing: antialiased;
-	font-smoothing: antialiased;
 }
 
 h1,
@@ -801,6 +800,7 @@ ol {
 	left: -35px;
 	top: 50%;
 	-webkit-transform: translateY(-35px);
+	transform: translateY(-35px);
 	background: #ffffff;
 }
 
@@ -3194,6 +3194,7 @@ ol {
 		left: 0;
 		top: 0;
 		-webkit-transform: translateY(0);
+		transform: translateY(0);
 	}
 	.categories__slider.owl-carousel .owl-nav button.owl-next {
 		right: -10px;
